# mcp_for_ethOnline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  parsed_result.json  pyproject.toml  server.py
mcp_modules/: parser_solidity.py  slither_wrapper.py
mcp_modules/common/: document_utils.py  errors.py  normalize.py  types.py
tests/: test_cache_management.py  test_parser_solidity.py  test_slither_wrapper.py
